# tanuki.py

./: .env  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  MANIFEST  SECURITY.md  SUPPORT.md  dev.requirements.txt  docs_pages.md  output.spec  package_spec.json  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py  tanuki.draft.md  test_script.py
.github/workflows/: backend_app_image.yml
apps/: __init__.py  app.py  entrypoint.sh
apps/controllers/: food_controller.py  youtube_controller.py
apps/extenders/: yelp_scraper.py
apps/routers/: __init__.py  food_router.py  youtube_router.py
apps/services/: food_service.py
deploy/: README.md  build_container.sh  push_container.sh  run_container.sh
docs/: anyscale.md  aws_bedrock.md  embeddings_support.md  function_configurability.md  function_confugrability.md  together_ai.md
examples/async_tasks/: main.py
examples/best_dishes/: main.py
examples/clean_language/: main.py
examples/email_cleaner/: .env.example  main.py  readme.md  requirements.txt
examples/email_matcher/: main.py  readme.md
examples/email_matching/: .env.example  main.py  readme.md  requirements.txt  test_email_matching.py
examples/google_news_scraper/: .env.example  main.py  readme.md  requirements.txt  utils.py
examples/language_filter/: main.py
examples/marketplace_classifier/: .env.example  README.md  main.py  requirements.txt
examples/only_food/: main.py
examples/score_sentiment/: main.py  main_embed.py
examples/semantic_sql/: main.py
examples/stock_winners/: main.py  main_dict.py  main_object_list.py  main_object_tuple.py  main_set.py  main_tuple.py
examples/toolchain/: main.py  scraper.py
examples/twitter_support/: main.py  readme.md  requirements.txt  run.sh
examples/utils/: main.py
examples/web_scraper/: .env.example  airbnb.py  cars.py  cocktail.py  countries.py  jobs.py  quotes.py  readme.md  requirements.txt  streeteasy.py  utils.py
examples/wikipedia/: Wikipedia.ipynb  wiki.py
log/: b'>C\xb3n1\xc5a\x99\x98g\xb3\x1f\xcd\xde\x04\x83'  b'\xac;W\x833\x85\x97|(q\r\x9d\\\xcaNM'
src/: align.py  assertion_visitor.py  bloom_filter.py  function_modeler.py  language_modeler.py  modeler.py  monkey.py  register.py  repair.py  utils.py  validator.py
src/aligns/: test_action_items.py  test_applied_functions.py  test_classify_sentiment.py
src/language_models/: language_modeler.py  llm_api_abc.py  openai_api.py
src/models/: function_description.py  function_example.py  language_model_output.py
src/monkey_patch/: assertion_visitor.py  bloom_filter.py  constants.py  exception.py  function_modeler.py  monkey.py  register.py  repair.py  utils.py  validator.py
src/monkey_patch.py.egg-info/: PKG-INFO  SOURCES.txt
src/tanuki/: __init__.py  _test_ast_parsing.py  assertion_visitor.py  bloom_filter.py  constants.py  function_modeler.py  register.py  runtime_assertion_visitor.py  static_assertion_visitor.py  utils.py  validator.py
src/tanuki.py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/trackers/: base_logger.py  buffered_logger.py  dataset_worker.py  text_file_logger.py
tests/: test_bloom_filter.py  test_configure_MP.py  test_finetune_hash.py  test_func_configs.py  test_hash.py  test_token_counter.py
tests/test_align/: test_align_class.py  test_align_dynamic.py  test_align_global.py  test_align_input.py  (+2 more)
(+95 files in other folders)
