[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.poetry]
name = "monkey-patch.py"
version = "0.0.5"
description = "The easiest way to build scalable LLM-powered applications, which gets cheaper and faster over time."
authors = ["Jack Hopkins <jack@paperplane.ai", "Mart Bakler <mart@paperplane.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
tanuki = "^0.1.0"
# Add your project dependencies here, for example:
# requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
fastapi = "0.104.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[[tool.poetry.source]]
name = "monkey-patch.py"
url = "https://github.com/monkey-patch-sdk/monkey-patch.py"
secondary = true
