[metadata]
name = monkey-patch.py
version = 0.0.5
author = Jack Hopkins
author_email = jack.hopkins@me.com
description = NOTE: This project has been moved [HERE](https://pypi.org/project/tanuki.py/)
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/monkey-patch-sdk/monkey-patch.py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    tanuki.py


[options.packages.find]
where = src
