[metadata]
name = tanuki.py
version = 0.1.4
author = Jack Hopkins
author_email = jack.hopkins@me.com
description = The easiest way to build scalable LLM-powered applications, which gets cheaper and faster over time.
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/monkeypatch/tanuki.py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pydantic>=1.8.2
    appdirs~=1.4.4
    openai==1.3.5
    numpy~=1.24.4
    python-dotenv==1.0.0
    bitarray==2.8.2
    pydantic==2.4.2


[options.packages.find]
where = src
